--- a/tyylit.css
+++ b/tyylit.css
@@ -33,6 +33,11 @@ h3 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 15px;
 }
+/* kokonaisaika muotoilu */
+#kokonais-yhteensa {
+    text-align: center;
+    color: white;
+}
 
 /* Ponnahdusikkunan muotoilu */
 #ponnahdusikkuna {
